--- a/views/admin/adminUpdateEspecialidadSuccess.pug
+++ b/views/admin/adminUpdateEspecialidadSuccess.pug
@@ -2,11 +2,12 @@ doctype html
 html
     head
         title Actualizar Médico
+        link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         link(rel="stylesheet", href="/css/headerAdmin.css")
         link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet" href="/css/adminCargarProfesional.css")
         link(rel="stylesheet" href="/css/adminUpdateProfesional.css")
-        link(rel="stylesheet" href="/css/footer.css")
+        link(rel="stylesheet" href="/css/footerNuevo.css")
     body
         include ../includes/headerAdmin
         main(class="mainAdmin")
