--- a/public/css/adminPanel.css
+++ b/public/css/adminPanel.css
@@ -1,5 +1,9 @@
+*, body{
+    font-family: 'Poppins', sans-serif;
+}
+
 .mainAdminPanel {
-    max-width: 900px;
+    height: 55vh;
     margin: 40px auto 60px auto;
     padding: 32px 24px;
     border-radius: 16px;
