--- a/public/css/adminRead.css
+++ b/public/css/adminRead.css
@@ -1,5 +1,5 @@
-h1{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+*, body{
+    font-family: 'Poppins', sans-serif;
 }
 
 form{
