--- a/public/css/styleGeneral1.css
+++ b/public/css/styleGeneral1.css
@@ -1,14 +1,23 @@
-html{
-    width: 100vw;
-    height: 100vh;
-    background-color: #FBFBFB;
-}
+
 
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-family: 'Poppins', sans-serif;
+}
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.mainAdmin {
+    flex: 1;
+    display: flex;
+    align-items: center;      /* centra vertical */
+    justify-content: center;  /* centra horizontal */
+    padding: 40px 20px;
 }
 
 header{
