--- a/views/admin/adminCargarAgenda.pug
+++ b/views/admin/adminCargarAgenda.pug
@@ -2,9 +2,10 @@ doctype html
 html
     head
         title Cargar Médico
+        link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         link(rel="stylesheet", href="/css/headerAdmin.css")
         link(rel="stylesheet", href="/css/styleGeneral1.css")
-        link(rel="stylesheet", href="/css/footer.css")
+        link(rel="stylesheet", href="/css/footerNuevo.css")
     body
         include ../includes/headerAdmin
         main(class="mainAdminCargarAgenda") 
