--- a/views/admin/adminCreateProfesional.pug
+++ b/views/admin/adminCreateProfesional.pug
@@ -2,12 +2,22 @@ doctype html
 html
     head
         title Cargar Médico
+        link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         link(rel="stylesheet", href="/css/headerAdmin.css")
-        link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet" href="/css/adminCreateProfesional.css")
-        link(rel="stylesheet" href="/css/footer.css")
+        link(rel="stylesheet" href="/css/alerta.css")
+        link(rel="stylesheet" href="/css/footerNuevo.css")
     body
         include ../includes/headerAdmin
+        if msg == 'ok'
+            div.alert.alert-success
+                span.icon ✓
+                |  Datos editados exitosamente
+
+        if msg == 'error'
+            div.alert.alert-error
+                span.icon ⚠
+                |  Hubo un error al editar tus datos
         main(class="mainAdminCreateProfesional")
             form(action="/profesional/crear", method="POST" class="formCreate")
                 span(class="spanCreate") Cargar un médico
@@ -47,3 +57,4 @@ html
                 button(type="submit" class="botonCreate") Cargar médico
         include ../includes/footer
         script(src="/js/logout.js")
+        script(src="/js/alerta.js")
