--- a/views/admin/adminCreateSuccess.pug
+++ b/views/admin/adminCreateSuccess.pug
@@ -2,12 +2,13 @@ doctype html
 html
     head
         title Cargar Médico
+        link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         link(rel="stylesheet", href="/css/headerAdmin.css")
         link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet", href="/css/adminCargarProfesional.css")
         link(rel="stylesheet", href="/css/adminCreateProfesional.css")
         link(rel="stylesheet" href="/css/adminCreateSuccess.css")
-        link(rel="stylesheet" href="/css/footer.css")
+        link(rel="stylesheet" href="/css/footerNuevo.css")
     body
         include ../includes/headerAdmin
         main(class="mainAdminCreateSuccess")
