--- a/views/admin/adminPanel.pug
+++ b/views/admin/adminPanel.pug
@@ -2,10 +2,11 @@ doctype html
 html
     head
         title Agenda de Consultorios
+        link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         link(rel="stylesheet", href="/css/headerAdmin.css")
         link(rel="stylesheet", href="/css/styleGeneral1.css")
         link(rel="stylesheet", href="/css/adminPanel.css")
-        link(rel="stylesheet", href="/css/footer.css")
+        link(rel="stylesheet", href="/css/footerNuevo.css")
     body
         include ../includes/headerAdmin
         main(class="mainAdminPanel") 
