--- a/views/admin/adminRegisterSecretaria.pug
+++ b/views/admin/adminRegisterSecretaria.pug
@@ -2,15 +2,22 @@ doctype html
 html
     head
         title Cargar Médico
+        link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap", rel="stylesheet")
         link(rel="stylesheet", href="/css/headerAdmin.css")
-        link(rel="stylesheet", href="/css/styleGeneral1.css")
-        link(rel="stylesheet", href="/css/adminCargarProfesional.css")
-        link(rel="stylesheet", href="/css/adminCreateProfesional.css")
         link(rel="stylesheet", href="/css/adminRegisterSecretaria.css")
-        link(rel="stylesheet", href="/css/login.css")
-        link(rel="stylesheet" href="/css/footer.css")
+        link(rel="stylesheet" href="/css/alerta.css")
+        link(rel="stylesheet" href="/css/footerNuevo.css")
     body
         include ../includes/headerAdmin
+        if msg == 'ok'
+            div.alert.alert-success
+                span.icon ✓
+                |  Datos editados exitosamente
+
+        if msg == 'error'
+            div.alert.alert-error
+                span.icon ⚠
+                |  Hubo un error al editar tus datos
         main(class="mainRegistro")
             section(class="sectionRegistro")
                 article(class="articleRegistro")
@@ -34,3 +41,4 @@ html
                         button(class="botonRegistro" type="submit") Registrar secretaria
         include ../includes/footer
         script(src="/js/logout.js")
+        script(src="/js/alerta.js")
