cambios en creacion de agenda

--- a/views/secretaria/secretariaCrearAgenda.pug
+++ b/views/secretaria/secretariaCrearAgenda.pug
@@ -21,12 +21,6 @@ html
           input(type="hidden" name="profesional_especialidad_id" id="profesional-id" required)
 
         
-        label(for="sucursal-search") Buscar Sucursal:
-        .autocompletar_contenedor
-          input(type="text" id="sucursal-search" class="autocompletar_input" placeholder="Buscar por nombre o dirección..." autocomplete="off")
-          input(type="hidden" name="sucursal_id" id="sucursal-id" required)
-
-        
         label(for="dia_inicio") Fecha de inicio:
         input(type="date" name="dia_inicio" required)
 
@@ -72,8 +66,6 @@ html
     script(src="https://cdn.jsdelivr.net/npm/flatpickr")
     script(src="/js/crearAgendas.js")
     script(src="/js/autocompletar_profesional_agenda.js")
-    script(src="/js/autocompletar_sucursal.js")
     script.
-      // Inicializar autocompletados
+      // Inicializar autocompletado
       const autocompletarProfesional = new AutocompletarProfesionalAgenda('profesional-search', 'profesional-id');
-      const autocompletarSucursal = new AutocompletarSucursal('sucursal-search', 'sucursal-id');
