--- a/views/secretaria/secretariaTurnos.pug
+++ b/views/secretaria/secretariaTurnos.pug
@@ -32,7 +32,8 @@ html
               th Acciones
           tbody
             each turno in turnos
-              tr(class=turno.estado === 'Por reasignar' ? 'turno-por-reasignar' : '')
+              - var claseEstado = turno.estado === 'Por reasignar' ? 'turno-por-reasignar' : turno.estado === 'Reservada' ? 'turno-reservado' : ''
+              tr(class=claseEstado)
                 td= turno.paciente_nombre
                 td= turno.nombre_medico
                 td= turno.especialidad 
@@ -46,7 +47,10 @@ html
                       img(src=turno.dni_foto_url alt="DNI Foto" class="dniSecreTurno" width="70" height="50")
                   else
                     p Foto no disponible
-                td= turno.estado
+                td
+                  = turno.estado
+                  if turno.es_sobreturno === 1
+                    span.badge-sobreturno  (Sobreturno)
                 td(class="acciones-cell")
                   a(href=`/turnos/editarTurno/${turno.id}` class="btnEditarSecreTurno") Cambiar estado
                   a(href=`/turnos/detalles/${turno.id}` class="btnEditarSecreTurno") Detalles
